--- a/WTSistemas/WTSistemas.csproj
+++ b/WTSistemas/WTSistemas.csproj
@@ -253,6 +253,12 @@
     <Content Include="Images\Carousel\01.png" />
     <Content Include="Images\Carousel\02.png" />
     <Content Include="Images\Carousel\03.png" />
+    <Content Include="Images\Icones\ajax.png" />
+    <Content Include="Images\Icones\celular.png" />
+    <Content Include="Images\Icones\configuracao.png" />
+    <Content Include="Images\Icones\html5.png" />
+    <Content Include="Images\Icones\layout.png" />
+    <Content Include="Images\Icones\segurança.png" />
     <Content Include="Scripts\bootstrap-3.0.2\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\bootstrap-3.0.2\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Scripts\bootstrap-3.0.2\fonts\glyphicons-halflings-regular.woff" />
